add public, css folders, application.css, simple css

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -4,12 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="../../public/css/application.css">
   <title>Hello Bye</title>
 </head>
 <body>
-  <h1 class="hello">HELLO WORLD</h1>
+  <br>
+  <br>
+  <h1 class="hello words">HELLO WORLD</h1>
   <img src="#" alt="hello" id="hiya">
-  <h1 class="bye">GOODBYE!</h1>
+  <h1 class="bye words">GOODBYE!</h1>
   <img src="#" alt="bye" id="ciao">
   <br>
   <br>
