--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,9 +11,9 @@
   <br>
   <br>
   <h1 class="hello words">HELLO WORLD</h1>
-  <img src="#" alt="hello" id="hiya">
+  <img src="../../public/images/hello.jpg" alt="hello" id="hiya">
   <h1 class="bye words">GOODBYE!</h1>
-  <img src="#" alt="bye" id="ciao">
+  <img src="../../public/images/goodbye.jpg" alt="bye" id="ciao">
   <br>
   <br>
   <button onclick="myFunction()">click me</button>
