add js folder and application.js change image heights

--- a/public/css/application.css
+++ b/public/css/application.css
@@ -3,9 +3,17 @@
 }
 img {
   width: 600px;
-  height: auto;
+  height: 337px;
 }
 .words {
   color: purple;
   font-size: 4em;
+}
+
+#helloWordsAndPic {
+  display: block;
+}
+
+#goodbyeWordsAndPic{
+  display: none;
 }
